--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
                     </video>
                 </div>
                 <div class="idea">
-                    <p style="color: #6679ad;">From the High-Risk Construction Oversight Study (HRCO), 41 recommendations were developed to strengthen the safety and oversight of these activities recommendations building and the construction.</p>
+                    <p style="color: #6679ad; text-align: center;">From the High-Risk Construction Oversight Study (HRCO), 41 recommendations were developed to strengthen the safety and oversight of these activities recommendations building and the construction.</p>
                     <div class="creative">
                         <span style="display: flex; align-items: center; gap: 20px;"><i class="fa fa-check-circle"></i><p>We Are Creative Team</p></span>
                         <span style="display: flex; align-items: center; gap: 20px;"><i class="fa fa-check-circle"></i><p>Honest and Dependable</p></span>
                         <span style="display: flex; align-items: center; gap: 20px;"><i class="fa fa-check-circle"></i><p>Quality Commitment</p></span>
                         <span style="display: flex; align-items: center; gap: 20px;"><i class="fa fa-check-circle"></i><p>We Are Always Improving</p></span>
                     </div>
-                    <p style="background: #efae16; padding: 20px; width: 30%; border-radius: 50px; margin-left: 70%;"><a><i class="fa fa-angle-right"></i>Read more details</a></p>
+                    <p style="background: #efae16; padding: 20px; width: 30%; border-radius: 50px; margin-left: 50%;"><a><i class="fa fa-angle-right"></i>Read more details</a></p>
                 </div>
             </div>
             
